--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,79 @@ table {
     border-spacing: 0;
 }
 
-/* GENERAL STUFF */
+/*--- GENERAL STUFF ---*/
+
+body {
+    background-color: #EEE;
+    color: #2C2C27;
+    font-family: 'Lato', sans-serif;
+}
+
+.main-container {
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+/*--- HEADER ---*/
+
+header {
+    min-height: 600px;
+    max-height: 800px;
+    background-image: url('../img/header-bg.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.nav-links {
+    width: 250px;
+    position: relative;
+    top: 35px;
+    left: 30px;
+    z-index: 10;
+}
+
+.nav-links li {
+    display: inline-block;
+    margin-right: 15px;
+    font-size: 1.125em;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+.nav-links li a {
+    color: white;
+}
+
+.header-feature {
+    position: relative;
+    top: 80px;
+    z-index: 10;
+}
+
+/*--- PROJECTS ---*/
+
+#projects-container {
+    background-color: #FFFFFD;
+    padding: 30px 30px 70px 30px;
+}
+
+.project {
+    min-width: 350px;
+    margin-top: 50px;
+}
+
+.project img {
+    float: left;
+    width: 45%;
+}
+
+.project-info {
+    display: inline-block;
+    width: 45%;
+    padding-left: 25px;
+}
+
+.project-info .project-title {
+    font-size: 2.5em;
+    font-weight: 600;
+}
