--- a/css/style.css
+++ b/css/style.css
@@ -103,23 +103,66 @@ header {
     padding: 30px 30px 70px 30px;
 }
 
+.projects-heading {
+    font-weight: 700;
+    font-size: 2.5em;
+}
+
 .project {
-    min-width: 350px;
-    margin-top: 50px;
+    clear: both;
+    min-height: 300px;
+    margin-top: 60px;
 }
 
 .project img {
     float: left;
-    width: 45%;
+    width: 49%;
+    box-shadow: 2px 4px 8px #999;
 }
 
 .project-info {
     display: inline-block;
     width: 45%;
-    padding-left: 25px;
+    margin-left: 25px;
 }
 
 .project-info .project-title {
+    font-size: 2em;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.project-tags {
+
+}
+
+.project-tags li {
+    display: inline-block;
+    background-color: #428BCA;
+    padding: 5px 7px;
+    border-radius: 5px;
+    font-weight: 300;
+    color: #FFF;
+    text-transform: uppercase;
+}
+
+.project-info p {
+    margin: 20px 0 10px 0;
+}
+
+.project-links li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+/*--- CONTACT FORM ---*/
+
+#contact-form-container {
+    padding: 30px 30px 70px 30px;
+    background-color: #F4F4F4;
+}
+
+.contact-form-heading {
+    font-weight: 700;
     font-size: 2.5em;
-    font-weight: 600;
 }
