--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ nav {
 
 #projects-container {
     background-color: #FFFFFD;
-    padding: 30px 0 70px 0;
+    padding: 30px 0 0 0;
 }
 
 #projects-container h1 {
@@ -328,7 +328,7 @@ nav {
 
 #aboutme-container {
     padding: 30px 30px 70px 30px;
-    background-color: #F8F8F8;
+    background-color: #fdfdfd;
 }
 
 #aboutme-container h1 {
