--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,13 +1,5 @@
 {{ partial "header.html" . }}
-
 {{ range first 10 .Data.Pages }}
-<article class="post">
-      <h2><a href="{{ .Permalink }}">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
-      <div class="post-meta">{{ .Date.Format "Mon, Jan 2, 2006" }} </div>
-
-    {{ .Summary }}
-        <a href='{{ .Permalink }}'><nobr>Read more →</nobr></a>
-</article>
+    {{ partial "li.html" . }}
 {{ end }}
-
 {{ partial "footer.html" . }}
