--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
+    </main>
 </div>
-<footer class="main-container">
+<footer class="site-footer main-container">
     <p class="copyright">&copy; 2015 Lasse Bjerre. All Rights Reserved.</p>
     <ul class="footer-social-icons">
         <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
