--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,30 @@
 {{ partial "header.html" . }}
+{{ $baseurl := .Site.BaseURL }}
+{{ $author := index .Site.Author }}
+
 {{ range first 10 .Data.Pages }}
-    {{ partial "li.html" . }}
+
+<article class="post {{ .Section }}">
+    <header class="post-header">
+        <h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+    </header>
+    <section class="post-excerpt">
+        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">&raquo;</a></p>
+    </section>
+    <footer class="post-meta">
+        <img class="author-thumb" src="/img/profile.jpg" alt="Author image" nopin="nopin" />
+        {{ $author.name }}
+
+        {{if .Params.tags }}on
+            {{ range $index, $tag := .Params.tags }}
+                &nbsp;<a href="{{$baseurl}}tags/{{ $tag | urlize }}/">#{{ $tag }}</a>,
+            {{ end }}
+        {{end}}
+        <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
+            {{ .Date.Format "2 Jan 2006" }}
+        </time>
+    </footer>
+</article>
+
 {{ end }}
 {{ partial "footer.html" . }}
