--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,7 @@ a:hover, .header-show-menu:hover {
 
 /*--- HEADER ---*/
 
-header {
+.site-header {
     min-height: 600px;
     max-height: 800px;
     height: 100vh;
@@ -84,7 +84,7 @@ header {
 }
 
     @media only screen and (min-width: 750px) {
-        header {
+        .site-header {
             height: 50vh;
             padding: 0 30px;
         }
@@ -232,6 +232,12 @@ nav {
 .feature-heading {
     font-size: 2em;
     font-weight: 400;
+}
+
+/*--- CONTENT ---*/
+
+.content {
+    background-color: #fff;
 }
 
 /*--- PROJECTS ---*/
@@ -400,11 +406,61 @@ nav {
 
 /*--- BLOG ---*/
 
+.post {
+    padding: 2rem 30px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: #EBF2F6 1px solid;
+    /*padding-bottom: 2rem;*/
+}
 
+.post-title {
+    font-size: 2em;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.post-title a {
+    color: #000;
+}
+
+.post-excerpt {
+    padding-bottom: 10px;
+    line-height: normal;
+}
+
+.post-content {
+    padding-top: 10px;
+    margin-bottom: 30px;
+    line-height: normal;
+}
+
+.post-meta {
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 30px;
+    color: #9EABB3;
+    font-size: 0.9em;
+}
+
+.post-meta .author-thumb {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    margin-right: 10px;
+}
+
+.post-meta .post-date {
+    border-left: #d5dbde 1px solid;
+    margin-left: 8px;
+    padding-left: 12px;
+    text-transform: uppercase;
+    font-size: 0.8em;
+}
 
 /*--- FOOTER ---*/
 
-footer {
+.site-footer {
     /*background-color: #1A1A1A;*/
     /*border-top: 4px #168BBB solid;*/
     box-shadow: none !important;
