--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,15 +9,15 @@
         <h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
     </header>
     <section class="post-excerpt">
-        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">&raquo;</a></p>
+        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">Read more →</a></p>
     </section>
     <footer class="post-meta">
-        <img class="author-thumb" src="/img/profile.jpg" alt="Author image" nopin="nopin" />
+        <img class="author-thumb" src="{{ .Site.BaseURL }}{{ .Site.Author.profilePicture }}" alt="Author image" nopin="nopin" />
         {{ $author.name }}
 
         {{if .Params.tags }}on
             {{ range $index, $tag := .Params.tags }}
-                &nbsp;<a href="{{$baseurl}}tags/{{ $tag | urlize }}/">#{{ $tag }}</a>,
+                &nbsp;<a href="{{$baseurl}}tags/{{ $tag | urlize }}/">#{{ $tag }}</a>
             {{ end }}
         {{end}}
         <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
