--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,11 +3,11 @@
 <footer class="site-footer main-container">
     <p class="copyright">&copy; 2015 Lasse Bjerre. All Rights Reserved.</p>
     <ul class="footer-social-icons">
-        <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
-        <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
-        <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://dk.linkedin.com/in/lasse-bjerre-93294896"><i class="fa fa-linkedin"></i></a></li>
-        <li><a href="mailto:lasse@lgb.dk"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="{{ .Site.Author.github }}"><i class="fa fa-github"></i></a></li>
+        <li><a href="{{ .Site.Author.steam }}"><i class="fa fa-steam"></i></a></li>
+        <li><a href="{{ .Site.Author.twitter }}"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="{{ .Site.Author.linkedin }}"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="mailto:{{ .Site.Author.mail }}"><i class="fa fa-envelope"></i></a></li>
     </ul>
 </footer>
 </body>
