--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
     </main>
 </div>
 <footer class="site-footer main-container">
-    <p class="copyright">&copy; 2015 Lasse Bjerre. All Rights Reserved.</p>
+    <p class="copyright">&copy; {{ .Now.Year }} {{ .Site.Author.name }}. All Rights Reserved.</p>
     <ul class="footer-social-icons">
         <li><a href="{{ .Site.Author.github }}"><i class="fa fa-github"></i></a></li>
         <li><a href="{{ .Site.Author.steam }}"><i class="fa fa-steam"></i></a></li>
