--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,18 +239,25 @@ nav {
 .content {
     max-width: 1300px;
     margin: 0 auto;
+    padding: 0;
 }
+
+    @media only screen and (min-width: 750px) {
+        .content {
+            padding: 0 30px;
+        }
+    }
 
 /*--- PROJECTS ---*/
 
 #projects-container {
-    padding-top: 30px;
+    margin: 2rem 0;
 }
 
 #projects-container h1 {
     font-weight: 700;
     font-size: 2.5em;
-    padding: 0 30px 0 30px;
+    padding: 0 30px;
 }
 
 .project {
@@ -275,9 +282,13 @@ nav {
 }
 
     @media only screen and (min-width: 750px) {
+
+        #projects-container h1 {
+            padding: 0;
+        }
+
         .project {
             flex-direction: row;
-            padding: 30px;
         }
 
         .project:nth-child(odd) {
@@ -334,7 +345,7 @@ nav {
 /*--- ABOUT ME ---*/
 
 #aboutme-container {
-    padding: 30px 30px 70px 30px;
+    margin: 2rem 30px;
 }
 
 #aboutme-container h1 {
@@ -377,6 +388,9 @@ nav {
 }
 
     @media only screen and (min-width: 750px) {
+        #aboutme-container {
+            margin: 2rem 0;
+        }
         .aboutme-content {
             flex-direction: row;
         }
@@ -406,13 +420,19 @@ nav {
 /*--- BLOG ---*/
 
 .post {
-    padding: 2rem 30px;
+    padding: 0 30px 2rem 30px;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 2rem auto;
     display: flex;
     flex-direction: column;
     border-bottom: #EBF2F6 1px solid;
 }
+
+    @media only screen and (min-width: 750px) {
+        .post {
+            padding: 0 0 2rem 0;
+        }
+    }
 
 /*
 .post-header {
@@ -425,7 +445,7 @@ nav {
 .post-title {
     font-size: 2em;
     font-weight: 700;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .post-title a {
@@ -433,13 +453,12 @@ nav {
 }
 
 .post-excerpt {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
     line-height: normal;
 }
 
 .post-content {
-    padding-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px 0;
     line-height: normal;
 }
 
@@ -483,14 +502,14 @@ nav {
 
 .copyright {
     line-height: 100px;
-    padding-left: 30px;
+    margin-left: 30px;
 }
 
 .footer-social-icons {
     text-align: right;
     line-height: 100px;
     font-size: 2em;
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .footer-social-icons li {
